<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.arunkarthickmam.mc_group22_ass2.MainActivity">

<EditText
    android:id="@+id/Age"
    android:layout_width="0dp"
    android:layout_height="41dp"
    android:ems="10"
    android:hint="@string/Age"
    android:inputType="textPersonName"
    android:layout_marginStart="17dp"
    android:layout_marginEnd="16dp"
    tools:layout_constraintTop_creator="1"
    tools:layout_constraintRight_creator="1"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="16dp"
    tools:layout_constraintLeft_creator="1"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toRightOf="@+id/PatientID"
    android:imeOptions="actionSend" />

<EditText
    android:id="@+id/PatientID"
    android:layout_width="101dp"
    android:layout_height="0dp"
    android:ems="10"
    android:hint="@string/Patient_ID"
    android:inputType="textPersonName"
    android:layout_marginEnd="110dp"
    tools:layout_constraintTop_creator="1"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintBottom_creator="1"
    app:layout_constraintBottom_toBottomOf="@+id/Age"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/Age"
    android:imeOptions="actionSend" />

<EditText
    android:id="@+id/PatientName"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:ems="10"
    android:hint="@string/Patient_Name"
    android:inputType="textPersonName"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="9dp"
    app:layout_constraintRight_toLeftOf="@+id/PatientID"
    tools:layout_constraintRight_creator="1"
    app:layout_constraintBaseline_toBaselineOf="@+id/PatientID"
    tools:layout_constraintBaseline_creator="1"
    tools:layout_constraintLeft_creator="1"
    app:layout_constraintLeft_toLeftOf="parent"
    android:imeOptions="actionSend"
    />

    <TextView
        android:id="@+id/Sex"
        android:layout_width="86dp"
        android:layout_height="30dp"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/Gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/Gendergroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PatientID"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

<com.jjoe64.graphview.GraphView
    android:id="@+id/graph"
    android:layout_width="0dp"
    android:layout_height="151dp"
    android:layout_marginStart="26dp"
    android:layout_marginEnd="26dp"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintBottom_creator="1"
    app:layout_constraintBottom_toTopOf="@+id/Run"
    app:layout_constraintRight_toRightOf="parent"
    tools:layout_constraintLeft_creator="1"
    android:layout_marginBottom="37dp"
    app:layout_constraintLeft_toLeftOf="parent" />

<Button
    android:id="@+id/Run"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Run"
    android:layout_marginEnd="38dp"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintBottom_creator="1"
    app:layout_constraintBottom_toTopOf="@+id/Stop"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginBottom="16dp"
    android:background="#99cc00"
    android:textColor="#101010"/>

<Button
    android:id="@+id/Stop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Stop"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintBottom_creator="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="@+id/Run"
    tools:layout_constraintLeft_creator="1"
    android:layout_marginBottom="43dp"
    app:layout_constraintLeft_toLeftOf="@+id/Run"
    android:background="#FF0000"
    android:textColor="#101010"/>

    <RadioGroup
        android:id="@+id/Gendergroup"
        android:layout_width="118dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PatientID"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="1dp"
            android:text="@string/Female"
            tools:layout_editor_absoluteX="290dp"
            tools:layout_editor_absoluteY="114dp" />

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            tools:layout_editor_absoluteX="291dp"
            tools:layout_editor_absoluteY="71dp" />

    </RadioGroup>

    <Button
        android:id="@+id/upload"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:background="#e6d926"
        android:text="@string/upload_db"
        app:layout_constraintBottom_toBottomOf="@+id/Run"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Run"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/download"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="#e6d926"
        android:text="@string/download_db"
        app:layout_constraintLeft_toLeftOf="@+id/upload"
        app:layout_constraintTop_toBottomOf="@+id/upload"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <TextView
        android:id="@+id/Legend"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginEnd="368dp"
        android:layout_marginTop="48dp"
        android:background="#87e9ff"
        android:textSize="15dp"
        android:text=" Acc X - Red \n Acc Y - Green \n Acc Z - Blue"
        android:textColor="#101010"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/Sex"
        app:layout_constraintTop_toBottomOf="@+id/PatientName" />

</android.support.constraint.ConstraintLayout>

